# Simple_OS

./: Cargo.toml  Readme.md  aarch64-simple_os.json
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
