[package]
name = "simple_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"

# Disable the generation to unwinding symbol information, because unwinding
# requires OS specific libraries
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
