[package]
name = "simple_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5.2"
volatile = "0.2.6"
bootloader = "0.9.8"
lazy_static = {version = "1.0", features = ["spin_no_std"]}

# Disable the generation to unwinding symbol information, because unwinding
# requires OS specific libraries
#[profile.dev]
#panic = "abort"

#[profile.release]
#panic = "abort"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
